
=========
 Changes
=========


0.4 (unreleased)
================

* added automated tests.

* fixed bug where log entries could be split by messages containing newline
  characters.

* added request query strings to log.