@@ -13,3 +13,5 @@
   characters.
 
 * added request query strings to log.
+
+* added the tracelog to the WSGI environment.
